5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1644_2445.log
== TEST (2019-04-15 22:35:06) 
-- CODE:
esc = input("c,f:")
temp = float(input("t:"))
if(esc==c):
	print(temp=5/9*(f-32))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(esc==c):
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:35:31) 
-- CODE:
esc = input("c,f:")
temp = float(input("t:"))
if(esc=c):
	print(temp=5/9*(f-32))

-- ERROR:
File "XXXX", line 3
    if(esc=c):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:35:47) 
-- CODE:
esc = input("c,f:")
temp = float(input("t:"))
if(esc==c):
	print(temp=5/9*(f-32))

-- EXECUTION TIME:
0.123001
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2445/main.py", line 3, in <module>
    if(esc==c):
NameError: name 'c' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:35:47) 
-- CODE:
esc = input("c,f:")
temp = float(input("t:"))
if(esc==c):
	print(temp=5/9*(f-32))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(esc==c):
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:37:56) 
-- CODE:
esc = input("c,f:")
temp = float(input("t:"))
if(esc==c)
	print(temp=5/9*(f-32))
else:
	print(c=5/9*(temp-32))
-- ERROR:
File "XXXX", line 3
    if(esc==c)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:38:19) 
-- CODE:
e = input("c,f:")
temp = float(input("t:"))

if(e ==c)
	print(temp=5/9*(f-32))
else:
	print(c=5/9*(temp-32))
-- ERROR:
File "XXXX", line 4
    if(e ==c)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:38:29) 
-- CODE:
e = input("c,f:")
temp = float(input("t:"))

if(e==c)
	print(temp=5/9*(f-32))
else:
	print(c=5/9*(temp-32))
-- ERROR:
File "XXXX", line 4
    if(e==c)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:38:42) 
-- CODE:
e = input("c,f:")
temp = float(input("t:"))

if(e==c):
	print(temp=5/9*(f-32))
else:
	print(c=5/9*(temp-32))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(e==c):
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:39:11) 
-- CODE:
e = input("c,f:")
temp = float(input("t:"))

if(e=="c"):
	print(temp=5/9*(f-32))
else:
	print(c=5/9*(temp-32))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(c=5/9*(temp-32))
TypeError: 'c' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:40:09) 
-- CODE:
e = input("c,f:")
temp = float(input("t:"))

if(e=="c"):
	print(temp 5/9*(f-32))
else:
	print(c=5/9*(temp-32))
-- ERROR:
File "XXXX", line 5
    print(temp 5/9*(f-32))
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:40:16) 
-- CODE:
e = input("c,f:")
temp = float(input("t:"))

if(e=="c"):
	print(temp =5/9*(f-32))
else:
	print(c=5/9*(temp-32))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(c=5/9*(temp-32))
TypeError: 'c' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:41:27) 
-- CODE:
e = input("c,f:")
temp = float(input("t:"))

if(e=="c"):
	print(temp=5/9*(f-32))
else:
	print(c=5/9*(temp-32))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(c=5/9*(temp-32))
TypeError: 'c' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:44:45) 
-- CODE:
e = input("c,f:")
temp = float(input("t:"))

if(e=="c"):
	print(temp=5/9*(f-32))
else:
	print(c=5/9*(temp-32))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(c=5/9*(temp-32))
TypeError: 'c' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:04:51) 
-- CODE:
e = input("c,f:")
temp = float(input("t:"))

if(e=="c"):
	print( f = 9/5*(temp+32))
else:
	print(c=5/9*(temp-32))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(c=5/9*(temp-32))
TypeError: 'c' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:07:05) 
-- CODE:
e = input("c,f:")
temp = float(input("t:"))

if(e=="c"):
	print( 9/5*(temp+32))
else:
	print(c=5/9*(temp-32))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(c=5/9*(temp-32))
TypeError: 'c' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:07:26) 
-- CODE:
e = input("c,f:")
temp = float(input("t:"))

if(e=="c"):
	print( 5/9*(temp+32))
else:
	print(c=5/9*(temp-32))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(c=5/9*(temp-32))
TypeError: 'c' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:08:54) 
-- CODE:
e = input("c,f:")
temp = float(input("t:"))

if(e=="c"):
	print( 5/9*(temp-32))
else:
	print( 5/9*(temp-32))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:11:08) 
-- CODE:
e = input("c,f:")
temp = float(input("t:"))

if(e=="c"):
	print( 5/9(temp+32) )
else:
	print( 5/9*(temp-32))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:11:28) 
-- CODE:
e = input("c,f:")
temp = float(input("t:"))

if(e=="c"):
	print( 5/9*(temp+32) )
else:
	print( 5/9*(temp-32))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:11:59) 
-- CODE:
e = input("c,f:")
temp = float(input("t:"))

if(e=="c"):
	print( 9/5*(temp+32) )
else:
	print( 5/9*(temp-32))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:15:18) 
-- CODE:
e = input("c,f:")
temp = float(input("t:"))

if(e=="c"):
	print( 9/5*temp+32 )
else:
	print( 5/9*(temp-32))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:15:46) 
-- CODE:
e = input("c,f:")
temp = float(input("t:"))

if(e=="c"):
	print( 9/5*temp+32 )
else:
	print( 5/9*(temp-32))
-- EXECUTION TIME:
0.14156
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.77777777777778
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:16:36) 
-- CODE:
e = input("c,f:")
temp = float(input("t:"))

if(e=="c"):
	print(round(9/5*temp+32,2))
else:
	print(round(5/9*(temp-32))
-- EXECUTION TIME:
0.164485
-- ERROR:
  File "/home/codebench/codes/1644/2445/main.py", line 8
    
                               ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:16:37) 
-- CODE:
e = input("c,f:")
temp = float(input("t:"))

if(e=="c"):
	print(round(9/5*temp+32,2))
else:
	print(round(5/9*(temp-32))
-- EXECUTION TIME:
0.144624
-- ERROR:
  File "/home/codebench/codes/1644/2445/main.py", line 8
    
                               ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:16:39) 
-- CODE:
e = input("c,f:")
temp = float(input("t:"))

if(e=="c"):
	print(round(9/5*temp+32,2))
else:
	print(round(5/9*(temp-32))
-- EXECUTION TIME:
0.244427
-- ERROR:
  File "/home/codebench/codes/1644/2445/main.py", line 8
    
                               ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:16:42) 
-- CODE:
e = input("c,f:")
temp = float(input("t:"))

if(e=="c"):
	print(round(9/5*temp+32,2))
else:
	print(round(5/9*(temp-32))
-- EXECUTION TIME:
0.212108
-- ERROR:
  File "/home/codebench/codes/1644/2445/main.py", line 8
    
                               ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:16:46) 
-- CODE:
e = input("c,f:")
temp = float(input("t:"))

if(e=="c"):
	print(round(9/5*temp+32,2))
else:
	print(round(5/9*(temp-32))
-- EXECUTION TIME:
0.192456
-- ERROR:
  File "/home/codebench/codes/1644/2445/main.py", line 8
    
                               ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:16:47) 
-- CODE:
e = input("c,f:")
temp = float(input("t:"))

if(e=="c"):
	print(round(9/5*temp+32,2))
else:
	print(round(5/9*(temp-32))
-- ERROR:
File "XXXX", line 8
    
                               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:17:10) 
-- CODE:
e = input("c,f:")
temp = float(input("t:"))

if(e=="c"):
	print(round(9/5*temp+32,2))
else:
	print(round(5/9*(temp-32,2))
-- ERROR:
File "XXXX", line 8
    
                                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:17:20) 
-- CODE:
e = input("c,f:")
temp = float(input("t:"))

if(e=="c"):
	print(round(9/5*temp+32,2))
else:
	print(round(5/9*(temp-32),2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:17:29) 
-- CODE:
e = input("c,f:")
temp = float(input("t:"))

if(e=="c"):
	print(round(9/5*temp+32,2))
else:
	print(round(5/9*(temp-32),2))
-- EXECUTION TIME:
0.223562
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:20:00) 
-- CODE:
e = input("c,f:")
temp = float(input("t:"))

if(e=="c"):
	print(round(9/5*temp+32,2))
else:
	print(round(5/9*(temp-32),2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:20:15) 
-- CODE:
e = input("c,f:")
temp = float(input("t:"))

if(e=="c"):
	print(round(9/5*temp+32,2))
else:
	print(round(5/9*(temp-32),2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:20:28) 
-- CODE:
e = input("c,f:")
temp = float(input("t:"))

if(e=="c"):
	print(round(9/5*temp+32,2))
else:
	print(round(5/9*(temp-32),2))
-- EXECUTION TIME:
0.215206
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:20:55) 
-- CODE:
e = input("C,F:")
temp = float(input("t:"))

if(e=="C"):
	print(round(9/5*temp+32,2))
else:
	print(round(5/9*(temp-32),2))
-- EXECUTION TIME:
0.159207
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
